// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header displays "Lifts | Name" when lift selected 1`] = `
<header
  className="MuiPaper-root-10 MuiPaper-elevation4-16 MuiAppBar-root-2 MuiAppBar-positionStatic-6 MuiAppBar-colorPrimary-8"
>
  <div
    className="MuiToolbar-root-37 MuiToolbar-gutters-38 Header-toolbar-1"
  >
    <h2
      className="MuiTypography-root-39 MuiTypography-title-45 MuiTypography-colorInherit-58"
    >
      Lifts | Second Lift
    </h2>
    <a
      className="MuiButtonBase-root-78 MuiButton-root-63 MuiButton-colorInherit-67"
      href="#/"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-64"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-81"
        >
          home
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-87"
      />
    </a>
  </div>
</header>
`;

exports[`Header displays "Lifts" when no lift selected 1`] = `
<header
  className="MuiPaper-root-10 MuiPaper-elevation4-16 MuiAppBar-root-2 MuiAppBar-positionStatic-6 MuiAppBar-colorPrimary-8"
>
  <div
    className="MuiToolbar-root-37 MuiToolbar-gutters-38 Header-toolbar-1"
  >
    <h2
      className="MuiTypography-root-39 MuiTypography-title-45 MuiTypography-colorInherit-58"
    >
      Lifts
    </h2>
    <a
      className="MuiButtonBase-root-78 MuiButton-root-63 MuiButton-colorInherit-67"
      href="#/"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-64"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-81"
        >
          home
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-87"
      />
    </a>
  </div>
</header>
`;
